IBM model implementation and testing

--- a/statistical-machine-translation/SMT-part2.ipynb
+++ b/statistical-machine-translation/SMT-part2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f0e34220",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "d4ea4e12-6f6d-4ccb-b80b-f64c21bf9d3c",
    "metadata": {},
    "outputs": [
@@ -127,6 +127,50 @@
       "\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.<lambda>()>,\n",
+       "            {'la': defaultdict(float,\n",
+       "                         {'the': 0.8333333333333333,\n",
+       "                          'house': 0.5833333333333333,\n",
+       "                          'big': 0.25,\n",
+       "                          'blue': 0.25,\n",
+       "                          'flower': 0.25}),\n",
+       "             'maison': defaultdict(float,\n",
+       "                         {'the': 0.5833333333333333,\n",
+       "                          'house': 0.5833333333333333,\n",
+       "                          'big': 0.25}),\n",
+       "             'NULL': defaultdict(float,\n",
+       "                         {'the': 1.4999999999999998,\n",
+       "                          'house': 0.5833333333333333,\n",
+       "                          'big': 0.25,\n",
+       "                          'blue': 0.25,\n",
+       "                          'flower': 0.25,\n",
+       "                          'dog': 0.3333333333333333,\n",
+       "                          'cat': 0.3333333333333333}),\n",
+       "             'grande': defaultdict(float,\n",
+       "                         {'the': 0.25, 'big': 0.25, 'house': 0.25}),\n",
+       "             'fleur': defaultdict(float,\n",
+       "                         {'the': 0.25, 'blue': 0.25, 'flower': 0.25}),\n",
+       "             'bleu': defaultdict(float,\n",
+       "                         {'the': 0.25, 'blue': 0.25, 'flower': 0.25}),\n",
+       "             'le': defaultdict(float,\n",
+       "                         {'the': 0.6666666666666666,\n",
+       "                          'dog': 0.3333333333333333,\n",
+       "                          'cat': 0.3333333333333333}),\n",
+       "             'chien': defaultdict(float,\n",
+       "                         {'the': 0.3333333333333333,\n",
+       "                          'dog': 0.3333333333333333}),\n",
+       "             'chat': defaultdict(float,\n",
+       "                         {'the': 0.3333333333333333,\n",
+       "                          'cat': 0.3333333333333333})})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -181,7 +225,39 @@
     "\n",
     "# take look into the probabilities after initialisation:\n",
     "sys.stdout.write(\"after initialisation:\\n\")\n",
-    "write_probs(Plex)"
+    "write_probs(Plex)\n",
+    "\n",
+    "Clex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "28cd817f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(float,\n",
+       "            {'la': 2.1666666666666665,\n",
+       "             'maison': 1.4166666666666665,\n",
+       "             'NULL': 3.5000000000000004,\n",
+       "             'grande': 0.75,\n",
+       "             'fleur': 0.75,\n",
+       "             'bleu': 0.75,\n",
+       "             'le': 1.3333333333333333,\n",
+       "             'chien': 0.6666666666666666,\n",
+       "             'chat': 0.6666666666666666})"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Cst"
    ]
   },
   {
@@ -194,18 +270,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "214538e2-777e-48a3-9613-66644898eef3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setting the number of iterations\n",
-    "iterations = 1"
+    "iterations = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "e4c42d55-0d74-4891-960d-c2693ab888a5",
    "metadata": {},
    "outputs": [
@@ -214,6 +290,49 @@
      "output_type": "stream",
      "text": [
       "iteration 1\n",
+      "la\tthe\t0.3846\n",
+      "la\thouse\t0.2692\n",
+      "la\tbig\t0.1154\n",
+      "la\tblue\t0.1154\n",
+      "la\tflower\t0.1154\n",
+      "\n",
+      "maison\tthe\t0.4118\n",
+      "maison\thouse\t0.4118\n",
+      "maison\tbig\t0.1765\n",
+      "\n",
+      "NULL\tthe\t0.4286\n",
+      "NULL\thouse\t0.1667\n",
+      "NULL\tbig\t0.0714\n",
+      "NULL\tblue\t0.0714\n",
+      "NULL\tflower\t0.0714\n",
+      "NULL\tdog\t0.0952\n",
+      "NULL\tcat\t0.0952\n",
+      "\n",
+      "grande\tthe\t0.3333\n",
+      "grande\tbig\t0.3333\n",
+      "grande\thouse\t0.3333\n",
+      "\n",
+      "fleur\tthe\t0.3333\n",
+      "fleur\tblue\t0.3333\n",
+      "fleur\tflower\t0.3333\n",
+      "\n",
+      "bleu\tthe\t0.3333\n",
+      "bleu\tblue\t0.3333\n",
+      "bleu\tflower\t0.3333\n",
+      "\n",
+      "le\tthe\t0.5000\n",
+      "le\tdog\t0.2500\n",
+      "le\tcat\t0.2500\n",
+      "\n",
+      "chien\tthe\t0.5000\n",
+      "chien\tdog\t0.5000\n",
+      "\n",
+      "chat\tthe\t0.5000\n",
+      "chat\tcat\t0.5000\n",
+      "\n",
+      "\n",
+      "\n",
+      "iteration 2\n",
       "la\tthe\t0.4554\n",
       "la\thouse\t0.3027\n",
       "la\tbig\t0.0919\n",
@@ -253,6 +372,264 @@
       "\n",
       "chat\tthe\t0.3717\n",
       "chat\tcat\t0.6283\n",
+      "\n",
+      "\n",
+      "\n",
+      "iteration 3\n",
+      "la\tthe\t0.5067\n",
+      "la\thouse\t0.3275\n",
+      "la\tbig\t0.0683\n",
+      "la\tblue\t0.0488\n",
+      "la\tflower\t0.0488\n",
+      "\n",
+      "maison\tthe\t0.2895\n",
+      "maison\thouse\t0.5879\n",
+      "maison\tbig\t0.1225\n",
+      "\n",
+      "NULL\tthe\t0.8017\n",
+      "NULL\thouse\t0.1044\n",
+      "NULL\tbig\t0.0218\n",
+      "NULL\tblue\t0.0156\n",
+      "NULL\tflower\t0.0156\n",
+      "NULL\tdog\t0.0205\n",
+      "NULL\tcat\t0.0205\n",
+      "\n",
+      "grande\tthe\t0.1312\n",
+      "grande\tbig\t0.6331\n",
+      "grande\thouse\t0.2357\n",
+      "\n",
+      "fleur\tthe\t0.1418\n",
+      "fleur\tblue\t0.4291\n",
+      "fleur\tflower\t0.4291\n",
+      "\n",
+      "bleu\tthe\t0.1418\n",
+      "bleu\tblue\t0.4291\n",
+      "bleu\tflower\t0.4291\n",
+      "\n",
+      "le\tthe\t0.5788\n",
+      "le\tdog\t0.2106\n",
+      "le\tcat\t0.2106\n",
+      "\n",
+      "chien\tthe\t0.2557\n",
+      "chien\tdog\t0.7443\n",
+      "\n",
+      "chat\tthe\t0.2557\n",
+      "chat\tcat\t0.7443\n",
+      "\n",
+      "\n",
+      "\n",
+      "iteration 4\n",
+      "la\tthe\t0.5472\n",
+      "la\thouse\t0.3429\n",
+      "la\tbig\t0.0476\n",
+      "la\tblue\t0.0312\n",
+      "la\tflower\t0.0312\n",
+      "\n",
+      "maison\tthe\t0.2266\n",
+      "maison\thouse\t0.6792\n",
+      "maison\tbig\t0.0942\n",
+      "\n",
+      "NULL\tthe\t0.8951\n",
+      "NULL\thouse\t0.0678\n",
+      "NULL\tbig\t0.0094\n",
+      "NULL\tblue\t0.0062\n",
+      "NULL\tflower\t0.0062\n",
+      "NULL\tdog\t0.0077\n",
+      "NULL\tcat\t0.0077\n",
+      "\n",
+      "grande\tthe\t0.0749\n",
+      "grande\tbig\t0.7396\n",
+      "grande\thouse\t0.1855\n",
+      "\n",
+      "fleur\tthe\t0.0874\n",
+      "fleur\tblue\t0.4563\n",
+      "fleur\tflower\t0.4563\n",
+      "\n",
+      "bleu\tthe\t0.0874\n",
+      "bleu\tblue\t0.4563\n",
+      "bleu\tflower\t0.4563\n",
+      "\n",
+      "le\tthe\t0.6210\n",
+      "le\tdog\t0.1895\n",
+      "le\tcat\t0.1895\n",
+      "\n",
+      "chien\tthe\t0.1700\n",
+      "chien\tdog\t0.8300\n",
+      "\n",
+      "chat\tthe\t0.1700\n",
+      "chat\tcat\t0.8300\n",
+      "\n",
+      "\n",
+      "\n",
+      "iteration 5\n",
+      "la\tthe\t0.5825\n",
+      "la\thouse\t0.3468\n",
+      "la\tbig\t0.0317\n",
+      "la\tblue\t0.0195\n",
+      "la\tflower\t0.0195\n",
+      "\n",
+      "maison\tthe\t0.1740\n",
+      "maison\thouse\t0.7568\n",
+      "maison\tbig\t0.0692\n",
+      "\n",
+      "NULL\tthe\t0.9454\n",
+      "NULL\thouse\t0.0409\n",
+      "NULL\tbig\t0.0037\n",
+      "NULL\tblue\t0.0023\n",
+      "NULL\tflower\t0.0023\n",
+      "NULL\tdog\t0.0027\n",
+      "NULL\tcat\t0.0027\n",
+      "\n",
+      "grande\tthe\t0.0422\n",
+      "grande\tbig\t0.8151\n",
+      "grande\thouse\t0.1427\n",
+      "\n",
+      "fleur\tthe\t0.0532\n",
+      "fleur\tblue\t0.4734\n",
+      "fleur\tflower\t0.4734\n",
+      "\n",
+      "bleu\tthe\t0.0532\n",
+      "bleu\tblue\t0.4734\n",
+      "bleu\tflower\t0.4734\n",
+      "\n",
+      "le\tthe\t0.6663\n",
+      "le\tdog\t0.1669\n",
+      "le\tcat\t0.1669\n",
+      "\n",
+      "chien\tthe\t0.1109\n",
+      "chien\tdog\t0.8891\n",
+      "\n",
+      "chat\tthe\t0.1109\n",
+      "chat\tcat\t0.8891\n",
+      "\n",
+      "\n",
+      "\n",
+      "iteration 6\n",
+      "la\tthe\t0.6147\n",
+      "la\thouse\t0.3408\n",
+      "la\tbig\t0.0205\n",
+      "la\tblue\t0.0120\n",
+      "la\tflower\t0.0120\n",
+      "\n",
+      "maison\tthe\t0.1323\n",
+      "maison\thouse\t0.8183\n",
+      "maison\tbig\t0.0493\n",
+      "\n",
+      "NULL\tthe\t0.9715\n",
+      "NULL\thouse\t0.0237\n",
+      "NULL\tbig\t0.0014\n",
+      "NULL\tblue\t0.0008\n",
+      "NULL\tflower\t0.0008\n",
+      "NULL\tdog\t0.0009\n",
+      "NULL\tcat\t0.0009\n",
+      "\n",
+      "grande\tthe\t0.0237\n",
+      "grande\tbig\t0.8677\n",
+      "grande\thouse\t0.1086\n",
+      "\n",
+      "fleur\tthe\t0.0323\n",
+      "fleur\tblue\t0.4839\n",
+      "fleur\tflower\t0.4839\n",
+      "\n",
+      "bleu\tthe\t0.0323\n",
+      "bleu\tblue\t0.4839\n",
+      "bleu\tflower\t0.4839\n",
+      "\n",
+      "le\tthe\t0.7105\n",
+      "le\tdog\t0.1448\n",
+      "le\tcat\t0.1448\n",
+      "\n",
+      "chien\tthe\t0.0712\n",
+      "chien\tdog\t0.9288\n",
+      "\n",
+      "chat\tthe\t0.0712\n",
+      "chat\tcat\t0.9288\n",
+      "\n",
+      "\n",
+      "\n",
+      "iteration 7\n",
+      "la\tthe\t0.6441\n",
+      "la\thouse\t0.3283\n",
+      "la\tbig\t0.0130\n",
+      "la\tblue\t0.0073\n",
+      "la\tflower\t0.0073\n",
+      "\n",
+      "maison\tthe\t0.0999\n",
+      "maison\thouse\t0.8658\n",
+      "maison\tbig\t0.0343\n",
+      "\n",
+      "NULL\tthe\t0.9849\n",
+      "NULL\thouse\t0.0134\n",
+      "NULL\tbig\t0.0005\n",
+      "NULL\tblue\t0.0003\n",
+      "NULL\tflower\t0.0003\n",
+      "NULL\tdog\t0.0003\n",
+      "NULL\tcat\t0.0003\n",
+      "\n",
+      "grande\tthe\t0.0133\n",
+      "grande\tbig\t0.9044\n",
+      "grande\thouse\t0.0823\n",
+      "\n",
+      "fleur\tthe\t0.0194\n",
+      "fleur\tblue\t0.4903\n",
+      "fleur\tflower\t0.4903\n",
+      "\n",
+      "bleu\tthe\t0.0194\n",
+      "bleu\tblue\t0.4903\n",
+      "bleu\tflower\t0.4903\n",
+      "\n",
+      "le\tthe\t0.7505\n",
+      "le\tdog\t0.1248\n",
+      "le\tcat\t0.1248\n",
+      "\n",
+      "chien\tthe\t0.0449\n",
+      "chien\tdog\t0.9551\n",
+      "\n",
+      "chat\tthe\t0.0449\n",
+      "chat\tcat\t0.9551\n",
+      "\n",
+      "\n",
+      "\n",
+      "iteration 8\n",
+      "la\tthe\t0.6704\n",
+      "la\thouse\t0.3128\n",
+      "la\tbig\t0.0081\n",
+      "la\tblue\t0.0044\n",
+      "la\tflower\t0.0044\n",
+      "\n",
+      "maison\tthe\t0.0748\n",
+      "maison\thouse\t0.9018\n",
+      "maison\tbig\t0.0234\n",
+      "\n",
+      "NULL\tthe\t0.9919\n",
+      "NULL\thouse\t0.0075\n",
+      "NULL\tbig\t0.0002\n",
+      "NULL\tblue\t0.0001\n",
+      "NULL\tflower\t0.0001\n",
+      "NULL\tdog\t0.0001\n",
+      "NULL\tcat\t0.0001\n",
+      "\n",
+      "grande\tthe\t0.0075\n",
+      "grande\tbig\t0.9300\n",
+      "grande\thouse\t0.0625\n",
+      "\n",
+      "fleur\tthe\t0.0116\n",
+      "fleur\tblue\t0.4942\n",
+      "fleur\tflower\t0.4942\n",
+      "\n",
+      "bleu\tthe\t0.0116\n",
+      "bleu\tblue\t0.4942\n",
+      "bleu\tflower\t0.4942\n",
+      "\n",
+      "le\tthe\t0.7849\n",
+      "le\tdog\t0.1075\n",
+      "le\tcat\t0.1075\n",
+      "\n",
+      "chien\tthe\t0.0277\n",
+      "chien\tdog\t0.9723\n",
+      "\n",
+      "chat\tthe\t0.0277\n",
+      "chat\tcat\t0.9723\n",
       "\n",
       "\n",
       "\n"
@@ -309,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "4c9f2c43-3b55-44ef-b991-15c459abdb97",
    "metadata": {
     "scrolled": true
@@ -320,45 +697,45 @@
      "output_type": "stream",
      "text": [
       "final probabilities:\n",
-      "la\tthe\t0.4554\n",
-      "la\thouse\t0.3027\n",
-      "la\tbig\t0.0919\n",
-      "la\tblue\t0.0750\n",
-      "la\tflower\t0.0750\n",
+      "la\tthe\t0.6704\n",
+      "la\thouse\t0.3128\n",
+      "la\tbig\t0.0081\n",
+      "la\tblue\t0.0044\n",
+      "la\tflower\t0.0044\n",
       "\n",
-      "maison\tthe\t0.3557\n",
-      "maison\thouse\t0.4943\n",
-      "maison\tbig\t0.1501\n",
+      "maison\tthe\t0.0748\n",
+      "maison\thouse\t0.9018\n",
+      "maison\tbig\t0.0234\n",
       "\n",
-      "NULL\tthe\t0.6452\n",
-      "NULL\thouse\t0.1439\n",
-      "NULL\tbig\t0.0437\n",
-      "NULL\tblue\t0.0357\n",
-      "NULL\tflower\t0.0357\n",
-      "NULL\tdog\t0.0480\n",
-      "NULL\tcat\t0.0480\n",
+      "NULL\tthe\t0.9919\n",
+      "NULL\thouse\t0.0075\n",
+      "NULL\tbig\t0.0002\n",
+      "NULL\tblue\t0.0001\n",
+      "NULL\tflower\t0.0001\n",
+      "NULL\tdog\t0.0001\n",
+      "NULL\tcat\t0.0001\n",
       "\n",
-      "grande\tthe\t0.2195\n",
-      "grande\tbig\t0.4909\n",
-      "grande\thouse\t0.2896\n",
+      "grande\tthe\t0.0075\n",
+      "grande\tbig\t0.9300\n",
+      "grande\thouse\t0.0625\n",
       "\n",
-      "fleur\tthe\t0.2238\n",
-      "fleur\tblue\t0.3881\n",
-      "fleur\tflower\t0.3881\n",
+      "fleur\tthe\t0.0116\n",
+      "fleur\tblue\t0.4942\n",
+      "fleur\tflower\t0.4942\n",
       "\n",
-      "bleu\tthe\t0.2238\n",
-      "bleu\tblue\t0.3881\n",
-      "bleu\tflower\t0.3881\n",
+      "bleu\tthe\t0.0116\n",
+      "bleu\tblue\t0.4942\n",
+      "bleu\tflower\t0.4942\n",
       "\n",
-      "le\tthe\t0.5420\n",
-      "le\tdog\t0.2290\n",
-      "le\tcat\t0.2290\n",
+      "le\tthe\t0.7849\n",
+      "le\tdog\t0.1075\n",
+      "le\tcat\t0.1075\n",
       "\n",
-      "chien\tthe\t0.3717\n",
-      "chien\tdog\t0.6283\n",
+      "chien\tthe\t0.0277\n",
+      "chien\tdog\t0.9723\n",
       "\n",
-      "chat\tthe\t0.3717\n",
-      "chat\tcat\t0.6283\n",
+      "chat\tthe\t0.0277\n",
+      "chat\tcat\t0.9723\n",
       "\n",
       "\n",
       "\n"
@@ -370,11 +747,19 @@
     "sys.stdout.write(\"final probabilities:\\n\")\n",
     "write_probs(Plex)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e45c3006",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -388,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
